--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.5.2",
     "bootstrap-social": "5.1.1",
+    "express": "^4.17.1",
     "font-awesome": "4.7.0",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
