--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nucampsite",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x", 
+    "yarn": "1.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -31,8 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build && mv -v build/ .. && cd .. && mv build public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
